update Sept 21 2016: changed big risk to JMP, removed Kellogg, updated contacts

--- a/code.html
+++ b/code.html
@@ -62,7 +62,7 @@
                                 <h2>Piotr Orłowski</h2>
                                 <h3>Universit&aacute della Svizzera italiana, Lugano</h3>
                                 <h3>Swiss Finance Institute</h3>
-                                <h3>Visiting @ Kellogg School of Management</h3>
+                                <!-- <h3>Visiting @ Kellogg School of Management</h3> -->
                             </div>   
                         </div>
                         <!-- /Profile/logo section-->
