--- a/contact.html
+++ b/contact.html
@@ -62,7 +62,7 @@
                                 <h2>Piotr Orłowski</h2>
                                 <h3>Universit&aacute della Svizzera italiana, Lugano</h3>
                                 <h3>Swiss Finance Institute</h3>
-                                <h3>Visiting @ Kellogg School of Management</h3>
+                                <!-- <h3>Visiting @ Kellogg School of Management</h3> -->
                             </div>   
                         </div>
                         <!-- /Profile/logo section-->
@@ -174,9 +174,9 @@
                             
                                 <div class="row">
                                     <div class="col-md-8">
-                                        <p>Until August 2016 I am visiting the Kellogg School of Management at Northwestern University in Evanston, IL, USA:</p>
-                                        <p>Room 448 <br> Department of Finance <br> Kellogg School of Management <br> 2001 Sheridan Road <br> Evanston, IL </p>
-                                        <p>From September 2016 I will be based in Switzerland.</p>                              
+                                        <p>In the academic year 2016/2017 I am visiting the University of Geneva</p>
+                                        <p>Room 404 <br> Geneva Finance Research Institute <br> Bd du Pont d'Arve 40 <br> 1211 Geneva <br> Switzerland </p>
+                                        <!-- <p>From September 2016 I will be based in Switzerland.</p>                               -->
                                     </div>
                                     <div class="col-md-4">
                                         <ul class="list-unstyled">
@@ -186,7 +186,7 @@
                                             </li>-->
                                             <li>
                                                 <strong><i class="fa fa-phone"></i>&nbsp;&nbsp;</strong>
-                                                <span>mob: +1 847 749 6027</span>
+                                                <span>mob: +41 786 499 638</span>
                                             </li>
                                             <!-- <li>
                                                 <strong><i class="fa fa-envelope"></i>&nbsp;&nbsp;</strong>
