--- a/index.htm
+++ b/index.htm
@@ -63,7 +63,7 @@
                                 <h2>Piotr Orłowski</h2>
                                 <h3>Universit&aacute della Svizzera italiana, Lugano</h3>
                                 <h3>Swiss Finance Institute</h3>
-                                <h3>Visiting @ Kellogg School of Management</h3>
+                                <!-- <h3>Visiting @ Kellogg School of Management</h3> -->
                             </div>   
                         </div>
                         <!-- /Profile/logo section-->
@@ -166,7 +166,7 @@
                                     <div class="clearfix visible-sm visible-xs"></div>
                                     <div class="col-sm-6 col-sm-offset-6 col-md-7 col-md-offset-7">
                                         <h3 class="title">Piotr Orłowski</h3>
-                                        <p>I am a PhD Candidate at the Universit&aacute della Svizzera italiana, Lugano, and currently a Visiting Pre-Doctoral Fellow at the Finance Department, Kellogg School of Management. My research spans modeling of option prices and returns, high-frequency econometrics and corresponding option trading strategies, and applications of convexity bounds on stochastic discount factors. <p>My everyday work tools are R/Rcpp, SQL, and high-performance computation clusters.</p></p>
+                                        <p>I am a PhD Candidate at the Universit&aacute della Svizzera italiana, Lugano. My research spans modeling of option prices and returns, high-frequency econometrics and corresponding option trading strategies, and applications of convexity bounds on stochastic discount factors. <p>My everyday work tools are R/Rcpp, SQL, and high-performance computation clusters.</p></p>
                                         <p>I will be a candidate at the 2017 Finance Job Market.</p>
                                     </div>  
                                 </div>
