--- a/gallery.html
+++ b/gallery.html
@@ -61,7 +61,7 @@
                             <div class="title">
                                 <h2>Piotr Orłowski</h2>
                                 <h3>University of Lugano</h3>
-                                <h3>Visiting @ Kellogg School of Management</h3>
+                                <!-- <h3>Visiting @ Kellogg School of Management</h3> -->
                             </div>   
                         </div>
                         <!-- /Profile/logo section-->
