--- a/talks.html
+++ b/talks.html
@@ -62,7 +62,7 @@
                                 <h2>Piotr Orłowski</h2>
                                 <h3>Universit&aacute della Svizzera italiana, Lugano</h3>
                                 <h3>Swiss Finance Institute</h3>
-                                <h3>Visiting @ Kellogg School of Management</h3>
+                                <!-- <h3>Visiting @ Kellogg School of Management</h3> -->
                             </div>   
                         </div>
                         <!-- /Profile/logo section-->
@@ -173,7 +173,7 @@
                                 <div class="row">
                                     <div class="col-md-12">
                                     <ul class="ul-boxed list-unstyled" id="Conferences">
-                                            <li> <h4>Modeling Divergence Swap Rates</h4> <h5>R in Finance 2016, Chicago, USA </h5> </li>
+                                            <li> <h4>Modeling Divergence Swap Rates</h4> <h5>R in Finance 2016, Chicago, USA | invited @ Ketchum Trading LLC, Chicago, USA</h5> </li>
                                             <li> <h4>Arbitrage Free Dispersion:</h4> <h5>9th SoFiE Conference, Hong Kong | 2015 SFI Research Days, Gerzensee, CH | Seminars: Kellogg </h5> </li>
                                             <li> <h4>Big Risk</h4> <h5>2015 SFI Research Days, Gerzensee, CH | Seminars: Kellogg</h5> </li>
                                             <li> <h4>Option Returns and Risk Premia: a Direct Approach</h4> <h5>8th SoFiE Conference, Pre-Conference for Young Scholars, Aarhus, DK </h5> </li>
