cv, profile updates

--- a/research.html
+++ b/research.html
@@ -172,14 +172,17 @@
                             
                                 <div class="row">
                                     <div class="col-md-8">
-                                        <p>My research interests include many topics in Financial Econometrics, such as: the analysis of higher-order risk premia in option markets in model-based and model-free settings; high-frequency econometric inference; and both empirical and theoretical asset pricing.</p>
-                                        <p>A financial econometrician's work is highly dependent on computational resources and programming ability. I make the code that I develop in the course of my research publicly available in order to promote the transparency of scientific research and make it more accessible to practitioners.</p>
+                                        <p> My research interests span various topics in Empirical Asset Pricing: model-free and model-based analysis of higher-order risk premia in option markets, the study of non-parametric bounds on the stochastic discount factor, and topics in the study of high-frequency asset price variation. I favour an approach to research based on rigourously developed theoretical foundations.</p>
+                                        <p> Work in modern Empirical Asset Pricing is highly dependent on computational resources and programming ability. I can handle very large and computationally complex problems. I also make parts of my code publicly available, in hope to forward the ability of the scientific society to tackle complex problems.</p>
+                                        <!-- <p>My research interests include many topics in Financial Econometrics, such as: the analysis of higher-order risk premia in option markets in model-based and model-free settings; high-frequency econometric inference; and both empirical and theoretical asset pricing.</p> -->
+                                        <!-- <p>A financial econometrician's work is highly dependent on computational resources and programming ability. I make the code that I develop in the course of my research publicly available in order to promote the transparency of scientific research and make it more accessible to practitioners.</p> -->
                                     </div>
                                     <div class="col-md-4">
                                         <div class="subtitle text-center">
                                             <h3>Interests</h3>
                                         </div>
                                         <ul class="ul-boxed list-unstyled">
+                                            <li>Empirical Asset Pricing</li>
                                             <li>Financial econometrics</li>
                                             <li>Option trading strategies</li>
                                             <li>Option pricing</li>
@@ -231,7 +234,7 @@
                                             <div>
                                                 <h3><a href="https://sites.google.com/site/andrassali/publications">Andr&aacutes Sali</a></h3>
                                                 <h4>Ph.D. candidate, University of Lugano</h4>
-                                                <h4>Quantitative Strategist, Morgan Stanley, Budapest, Hungary</h4>
+                                                <h4>Data Scientist, Alphacruncher Hungary, Budapest</h4>
                                                 <!-- <a href="#" class="btn btn-info">+ Follow</a> -->
                                             </div>
                                             <div>
