--- a/talks.html
+++ b/talks.html
@@ -173,7 +173,7 @@
                                 <div class="row">
                                     <div class="col-md-12">
                                     <ul class="ul-boxed list-unstyled" id="Conferences">
-                                            <li> <h4>Modeling Divergence Swap Rates</h4> <h5>R in Finance 2016, Chicago, USA | invited @ Ketchum Trading LLC, Chicago, USA</h5> </li>
+                                            <li> <h4>Modeling Divergence Swap Rates in Incomplete Option Markets</h4> <h5>R in Finance 2016, Chicago, USA | invited @ Ketchum Trading LLC, Chicago, USA</h5> </li>
                                             <li> <h4>Arbitrage Free Dispersion:</h4> <h5>9th SoFiE Conference, Hong Kong | 2015 SFI Research Days, Gerzensee, CH | Seminars: Kellogg </h5> </li>
                                             <li> <h4>Big Risk</h4> <h5>2015 SFI Research Days, Gerzensee, CH | Seminars: Kellogg</h5> </li>
                                             <li> <h4>Option Returns and Risk Premia: a Direct Approach</h4> <h5>8th SoFiE Conference, Pre-Conference for Young Scholars, Aarhus, DK </h5> </li>
