added links to employers, alphacr ag

--- a/index.htm
+++ b/index.htm
@@ -290,12 +290,23 @@
                                             </li> -->
                                             <li>
                                                 <div class="dates">
+                                                    <span>Since</span>
+                                                    <span>09.2016</span>
+                                                </div>
+                                                <div class="content">
+                                                    <h4>Consultant: Data Science</h4>
+                                                    <p><a href="http://alphacruncher.com/">Alphacruncher AG</a>, Lugano, Switzerland</p>
+                                                    <p>Analysis of unstructured or weakly-structured data. Data modelling. Development of analytical tools for education and investment management.</p>
+                                                </div>
+                                            </li>
+                                            <li>
+                                                <div class="dates">
                                                     <span>2007</span>
                                                     <span>2010</span>
                                                 </div>
                                                 <div class="content">
                                                     <h4>Senior Economist</h4>
-                                                    <p>Dom Maklerski AFS, Warsaw, Poland</p>
+                                                    <p><a href="http://www.dmafs.pl/">Dom Maklerski AFS</a>, Warsaw, Poland</p>
                                                     <p>Development of Risk Management and Derivatives Accounting software solutions, FX derivatives pricing and modeling. Consultant for Risk Management and Controlling for Poland's top listed companies.</p>
                                                 </div>
                                             </li>
