--- a/publication.html
+++ b/publication.html
@@ -215,6 +215,9 @@
                                                                 <i class="fa fa-cloud-download"></i>
                                                             </a>
                                                              -->
+                                                             <a href="papers/br.pdf" class="tooltips" title="Download" target="_blank">
+                                                                <i class="fa fa-cloud-download"></i>
+                                                            </a>
                                                         </div>
 
                                                         <h4 class="pubtitle">Big Risk</h4>
