--- a/index.htm
+++ b/index.htm
@@ -61,8 +61,8 @@
                             <div class="portrate hidden-xs"></div>
                             <div class="title">
                                 <h2>Piotr Orłowski</h2>
-                                <h3>Universit&aacute della Svizzera italiana, Lugano</h3>
-                                <h3>Swiss Finance Institute</h3>
+                                <h3>HEC Montr&eacuteal</h3>
+                                <h3>D&eacutepartement de finance</h3>
                                 <!-- <h3>Visiting @ Kellogg School of Management</h3> -->
                             </div>   
                         </div>
@@ -79,16 +79,9 @@
                                 </li>  
                                 
                                 <li>
-                                  <a href="research.html">
-                                    <i class="fa fa-book"></i>
-                                    <div class="text">Research</div>
-                                  </a>
-                                </li> 
-                                
-                                <li>
                                   <a href="publication.html">
                                     <i class="fa fa-edit"></i>
-                                    <div class="text">Papers</div>
+                                    <div class="text">Research</div>
                                   </a>
                                 </li> 
 
@@ -168,8 +161,12 @@
                                         <p> <br /> <br />  <br />  <br />  <br />  <br />  <br /> </p>
                                         <h3 class="title">Piotr Orłowski</h3>
                                         <p>
-                                        I am a PhD Candidate at the Universit&aacute della Svizzera italiana, Lugano. My research spans a number of topics in Asset Pricing: option prices and associated higher-order risk premia, non-parametric studies of the stochastic discount factor, and high-frequency econometrics. <p>My everyday work tools are R/Rcpp, SQL, and high-performance computation clusters.</p></p>
-                                        <p>I will be a available for interviews at the ASSA meeting in Chicago, January 6-8th 2017.</p>
+                                        I am an Assistant Professor in the Department of Finance at HEC Montr&eacuteal.
+                                        In my research I focus on understanding option and equity markets both through model-based and non-parametric methods.
+
+                                        </p>
+
+                                        <p>I D&eacutecisions financi&egraveres de la firme / Topics in Corporate Finance and M&eacutethodologie de la finance empirique / Financial Econometrics in the M.Sc. in Finance programme.</p>
                                     </div>  
                                 </div>
                             </div>        
@@ -189,12 +186,12 @@
                                             <li>
                                                 <div class="dy">
                                                     <span class="degree">Ph.D.</span>
-                                                    <span class="year">Since 2010</span>
+                                                    <span class="year">2010-2017</span>
                                                 </div>
                                                 <div class="description">
                                                     <p class="waht">Finance</p>
-                                                    <p class="where">Universit&aacute della Svizzera italiana, Lugano, and Swiss Finance Institute</p>
-                                                    <p class="where"> Work under the supervision of Professor Fabio Trojani in empirical asset pricing and financial econometrics.</p>
+                                                    <p class="where">Universit&agrave della Svizzera italiana, Lugano, and Swiss Finance Institute</p>
+                                                    <p class="where"> Empirical Asset Pricing and Financial Econometrics.</p>
                                                 </div>
                                             </li>
                                             <li>
@@ -230,47 +227,54 @@
                                     </div>    
                                     <div class="col-md-5 col-md-offset-1">
                                         <div class="title text-center">
-                                            <h3>Teaching</h3>
+                                            <h3>Teaching @ HEC</h3>
                                         </div>
                                         <ul class="ul-dates">
                                             <li>
                                             <div class="dates">
-                                                <span>2014</span>
-                                                <span>2015</span>
+                                                <span>2019</span>
+                                                <span>Autumn</span>
                                             </div>
                                             <div class="content">
-                                                <h4>Financial Econometrics</h4>
-                                                <p>TA for Professor Patrick Gagliardini. Principles of Financial Econometrics for Master in Finance students at Universit&aacute della Svizzera italiana, Lugano. The course covers the principles of statistical inference and applies them to linear factor models and GARCH volatility models.</p>
+                                                <h4>D&eacutecisions Financi&egraveres de la Firme &#8212 6-201-04</h4>
+                                                <h4>Topics in Corporate Finance &#8212 6-200-07A</h4>
                                             </div>
                                             </li>
                                             <li>
                                             <div class="dates">
-                                                <span>2013</span>
-                                                <span>2011</span>
+                                                <span>2019</span>
+                                                <span>Winter</span>
                                             </div>
                                             <div class="content">
-                                                <h4>Probability (PhD)</h4>
-                                                <p>TA for Professor Fabio Trojani. Advanced probability course for first year PhD in Finance students at Universit&aacute della Svizzera italiana, Lugano. The course covered measure-theoretic probability, the theory of stochastic processes and statistical inference in general contexts. </p>
+                                                <h4>M&eacutethodologie de la finance empirique &#8212 6-203-04</h4>
                                             </div>
                                             </li>
                                             <li>
                                             <div class="dates">
-                                                <span>2015</span>
-                                                <span>2011</span>
+                                                <span>2018</span>
+                                                <span>Autumn</span>
                                             </div>
                                             <div class="content">
-                                                <h4>Probability for Finance I</h4>
-                                                <p>TA for Professor Fabio Trojani. Introductory probability course for Master in Finance students at Universit&aacute della Svizzera italiana, Lugano based on volume I of "Stochastic Calculus for Finance" by S. Shreve.</p>
+                                                <h4>D&eacutecisions Financi&egraveres de la Firme &#8212 6-200-04</h4>
+                                                <h4>Financial Econometrics &#8212 6-203-10A</h4>
                                             </div>
                                             </li>
                                             <li>
                                             <div class="dates">
-                                                <span>2007</span>
-                                                <span>2010</span>
+                                                <span>2018</span>
+                                                <span>Winter</span>
                                             </div>
                                             <div class="content">
-                                                <h4>Econometrics</h4>
-                                                <p>TA for Econometrics course for Bachelor students at the Warsaw School of Economics. The course covereed the basics of econometrics and operations research methods. </p>
+                                                <h4>D&eacutecisions Financi&egraveres de la Firme &#8212 6-200-04</h4>
+                                            </div>
+                                            </li>
+                                            <li>
+                                            <div class="dates">
+                                                <span>2017</span>
+                                                <span>Autumn</span>
+                                            </div>
+                                            <div class="content">
+                                                <h4>D&eacutecisions Financi&egraveres de la Firme &#8212 6-200-04</h4>
                                             </div>
                                             </li>
                                         </ul>
