--- a/gallery.html
+++ b/gallery.html
@@ -59,8 +59,8 @@
                         <div id="profile" class="clearfix">
                             <div class="portrate hidden-xs"></div>
                             <div class="title">
-                                <h2>Piotr Orłowski</h2>
-                                <h3>University of Lugano</h3>
+                                <h3>HEC Montr&eacuteal</h3>
+                                <h3>D&eacutepartement de finance</h3>
                                 <!-- <h3>Visiting @ Kellogg School of Management</h3> -->
                             </div>   
                         </div>
