--- a/projects.html
+++ b/projects.html
@@ -60,8 +60,8 @@
                             <div class="portrate hidden-xs"></div>
                             <div class="title">
                                 <h2>Piotr Orłowski</h2>
-                                <h3>University of Lugano</h3>
-                                <h3>Visiting @ Kellogg School of Management</h3>
+                                <h3>HEC Montr&eacuteal</h3>
+                                <h3>D&eacutepartement de finance</h3>
                             </div>   
                         </div>
                         <!-- /Profile/logo section-->
