--- a/research.html
+++ b/research.html
@@ -60,8 +60,8 @@
                             <div class="portrate hidden-xs"></div>
                             <div class="title">
                                 <h2>Piotr Orłowski</h2>
-                                <h3>Universit&aacute della Svizzera italiana, Lugano</h3>
-                                <h3>Swiss Finance Institute</h3>
+                                <h3>HEC Montr&eacuteal</h3>
+                                <h3>D&eacutepartement de finance</h3>
                             </div>   
                         </div>
                         <!-- /Profile/logo section-->
