move to index.html

--- a/gallery.html
+++ b/gallery.html
@@ -75,7 +75,7 @@
                                     <div class="text">About Me</div>
                                   </a>
                                 </li>  
-                                
+                                s
                                 <li>
                                   <a href="research.html">
                                     <i class="fa fa-book"></i>
@@ -86,7 +86,7 @@
                                 <li>
                                   <a href="publication.html">
                                     <i class="fa fa-edit"></i>
-                                    <div class="text">index.htmpers</div>
+                                    <div class="text">pers</div>
                                   </a>
                                 </li> 
 
