--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         <div id="main-nav">
                             <ul id="navigation">
                                 <li class="currentmenu">
-                                  <a href="index.htm">
+                                  <a href="index.html">
                                     <i class="fa fa-user"></i>
                                     <div class="text">About Me</div>
                                   </a>
@@ -385,7 +385,7 @@
                                                             <!-- <img alt="image" class="thumbnail img-responsive" src="img/personal/SNF_RGB_E_POS.jpg" > -->
                                                         </div>
                                                         <div class="col-md-10">
-                                                            Doc.Mobility grant, project number P1TIP1_161875, "Option portfolio returns and dispersion". Financing of research visit at the Kellogg School of Management in order to work with <a href="http://www.kellogg.northwestern.edu/faculty/todorov/htm/index.htm">Professor Viktor Todorov</a>.
+                                                            Doc.Mobility grant, project number P1TIP1_161875, "Option portfolio returns and dispersion". Financing of research visit at the Kellogg School of Management.
                                                         </div>
                                                     </div>
                                                 </div>
