--- a/projects.html
+++ b/projects.html
@@ -70,7 +70,7 @@
                         <div id="main-nav">
                             <ul id="navigation">
                                 <li class="currentmenu">
-                                  <a href="index.htm">
+                                  <a href="index.html">
                                     <i class="fa fa-user"></i>
                                     <div class="text">About Me</div>
                                   </a>
