br and afd links to ssrn

--- a/publication.html
+++ b/publication.html
@@ -208,7 +208,7 @@
                                                                 <i class="fa fa-cloud-download"></i>
                                                             </a>
                                                              -->
-                                                             <a href="papers/br.pdf" class="tooltips" title="Download" target="_blank">
+                                                             <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3391998" class="tooltips" title="Download" target="_blank">
                                                                 <i class="fa fa-cloud-download"></i>
                                                             </a>
                                                         </div>
@@ -248,7 +248,7 @@
                                                             <a href="http://www.sciencedirect.com/science/article/pii/S1057740812000290" class="tooltips" title="External link" target="_blank">
                                                             </a> -->
                                                             <!-- <i class="fa fa-external-link"></i> -->
-                                                            <a href="papers/afd.pdf" class="tooltips" title="Download" target="_blank">
+                                                            <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3314269" class="tooltips" title="Download" target="_blank">
                                                                 <i class="fa fa-cloud-download"></i>
                                                             </a>
                                                             
